--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap');
 
-html,
-body {
+html, body {
   margin: 0;
   border: 0;
   font-family: 'Roboto', sans-serif;
@@ -12,11 +11,11 @@ body {
   grid-template-columns: 1fr;
   align-items: center;
   background-color: cadetblue;
+  text-align: center;
 }
 
 .title {
   padding: 50px 25px;
-  text-align: center;
 }
 
 h1 {
@@ -31,10 +30,17 @@ h4 {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 @media (min-width: 960px) {
   .header {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+  }
+  
+  .title {
+    padding: 50px;
   }
 }
